--- a/Profolio_website-main/myportfolio/src/App.css
+++ b/Profolio_website-main/myportfolio/src/App.css
@@ -1,6 +1,75 @@
 @import url('https://fonts.googleapis.com/css2?family=Playwrite+CA:wght@100..400&display=swap');
 @import url('https://fonts.googleapis.com/css2?family=Cinzel:wght@400..900&family=Oleo+Script:wght@400;700&family=Playwrite+CA:wght@100..400&display=swap');
 
+.ball-div {
+  width: 150px;
+  height: 150px;
+}
+
+
+@media (max-width: 768px) {
+  .ball-div  {
+    width: 100px;
+    height: 100px;
+  }
+}
+
+@media (max-width: 992px) {
+  .ball-div {
+    width: 120px;
+    height: 120px;
+  }
+}
+
+.bg-video-div {
+  position: relative;
+  width: 100%;
+  height: 100vh;
+  color: white;
+  font-size: 24px;
+  font-weight: bold;
+  overflow: hidden;
+  border: 2px solid #000;
+}
+
+.bg-video-div::before {
+  content: "";
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background: rgba(0, 0, 0, 0.5); 
+  z-index: 0;
+}
+
+.bg-video-div video {
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  object-fit: cover;
+  z-index: -1;
+}
+
+@media (max-width: 768px) {
+  .bg-video-div {
+    height: 120vh;
+  }
+}
+@media (max-width: 462px) {
+  .bg-video-div {
+    height: 140vh;
+  }
+}
+
+@media (max-width: 400px) {
+  .bg-video-div {
+    height: 170vh;
+  }
+}
+
 
 
 :root { 
@@ -23,6 +92,7 @@
   padding: 0;
   overflow-x: hidden;
 }
+
 
 
 
@@ -1243,4 +1313,5 @@ box-shadow: 0 0 250px 20px #42F2A1;
 
 to { box-shadow: 0 0 100px 15px #F4F6AD; }
 }
+
 
